fixed content alignment

--- a/styles.css
+++ b/styles.css
@@ -81,5 +81,5 @@ main {
 }
 
 .friends {
-    align-items: center;
+    align-content: center;
 }
